--- a/canvas game/index.html
+++ b/canvas game/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS  intro</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
-    <!----<script src="variables.js">---->
-        <script src="variables3.js"></script>
-    </script>
+    <h1>Canvas Demo</h1>
+    <canvas id="paint-box"></canvas>
 </body>
 </html>
