--- a/Classroom stuff/javascript/Prototypes/index.html
+++ b/Classroom stuff/javascript/Prototypes/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS  intro</title>
+    <title>Document</title>
+    <style>
+        body{
+            background-color: #3333;
+        }
+    </style>
+    <script src="script.js"></script>
 </head>
 <body>
-    <!----<script src="variables.js">---->
-        <script src="variables3.js"></script>
-    </script>
+    
 </body>
 </html>
