--- a/classroom_stuff/javascript/delay/index.html
+++ b/classroom_stuff/javascript/delay/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script2.js"></script>
+    <script async defer src="script.js"></script>
 </head>
+
 <body>
-    
+    <button type="Counter" id="btnCounter">Count</button>
+    <button type="wait" id="btnWait">Done</button>
+    <h2 id="status">start</h2>
+     <h3 id="pressCount">0</h3>
 </body>
 </html>
