--- a/classroom_stuff/javascript/fizz-buzz/index.html
+++ b/classroom_stuff/javascript/fizz-buzz/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="closures2.js"></script>
+    <script async defer src="script.js"></script>
 </head>
 <body>
-    
+    <input type="number" name="" id="inputNum">
+    <button id="btnPrint">Print</button>
+    <ul id="ulNumlist">
+      
+    </ul>
 </body>
 </html>
